DDF-191: fixes to the windows start scripts